--- a/Blog.csproj
+++ b/Blog.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="microsoft.aspnetcore.authentication" Version="2.2.0" />
+    <PackageReference Include="microsoft.aspnetcore.authentication.jwtbearer" Version="6.0.5" />
     <PackageReference Include="microsoft.entityframeworkcore" Version="6.0.5" />
     <PackageReference Include="microsoft.entityframeworkcore.design" Version="6.0.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
